# fline-api

./: Fline.R  Makefile  Pipfile  app.py  digitizer.py  pyproject.toml
R_output_example/: bg.csv  food_log.csv
screenshots/: IMG_2225.png.csv
templates/: drop.js  image.min.js  index.html  lib.js  main.js
